# cargo-prod

./: Cargo.toml  README.md
.github/: workflows.yml
.github/workflows/: binaries.yml
src/: appimage.rs  aur.rs  deb.rs  error.rs  lib.rs  main.rs  xbps.rs
